2010-09-15  Sam Steingold  <sds@gnu.org>

	* win32.d (gethostname): #undef after including <unistd.h> and
	before including winsock headers, as per
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs/23076>

2010-09-15  Sam Steingold  <sds@gnu.org>

	* utils/gen-uninames: remove, superseded by
	src/gllib/uniname/gen-uninames.lisp

2010-09-15  Sam Steingold  <sds@gnu.org>

	update gnulib
	* modules/regexp/gllib/regex.h, modules/regexp/glm4/regex.m4:
	* gllib/langinfo.in.h, gllib/nl_langinfo.c, gllib/string.in.h:
	* gllib/wctype.in.h, gllib/uniwidth/width.c, glm4/langinfo_h.m4:
	* glm4/lib-ld.m4, glm4/memchr.m4, glm4/progtest.m4:
	* glm4/sockets.m4, glm4/wctype_h.m4: update
	* glm4/socketlib.m4: add

2010-09-15  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCC_CREATESHARED): use soname & output_objdir
	separately because of cygwin

2010-09-14  Sam Steingold  <sds@gnu.org>

	* init.lisp (load): return the truename of the loaded file

2010-09-14  Sam Steingold  <sds@gnu.org>

	interface to the POSIX function nftw()
	* modules/syscalls/calls.c (FILE-TREE-WALK): add
	* modules/syscalls/posix.lisp (file-tree-walk) [unix]: export
	* modules/syscalls/configure.in: check for nftw and ftw.h

2010-09-14  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (parse-signature): accept :SECLASS and pass
	it to MAKE-SIGNATURE
	(defun-p): pass SEC to PARSE-SIGNATURE instead of ignoring it

2010-09-13  Sam Steingold  <sds@gnu.org>

	bundle ASDF2 as a module
	* Makefile.devel (update-asdf): new .PHONY target
	(pre-release): depend on it
	* modules/asdf: add (based on asdf 2.008)
	* makemake.in, unix/INSTALL: mention asdf in the docs

2010-09-14  Sam Steingold  <sds@gnu.org>

	* modules/clx/mit-clx/Makefile (clisp-module): depend on link.sh
	which is required by clisp-link.sh
	* modules/clx/mit-clx/link.sh (NEW_MODULES): add "clx"
	(NEW_FILES): one loop instead of two

2010-09-14  Sam Steingold  <sds@gnu.org>

	* clisp-link.in: support module which have no C component: