@@ -1,5 +1,13 @@
 2010-09-15  Sam Steingold  <sds@gnu.org>
 
+	* utils/modprep.lisp (checker): replace reverse with
+	use_default_function to conform to c_lisp_map_t
+	(new-checker): update signature and make-checker call
+	(print-tables-1): use use_default_function to init the map struct field
+	* modules/syscalls/calls.c: update DEFCHECKER invocations
+
+2010-09-15  Sam Steingold  <sds@gnu.org>
+
 	* win32.d (gethostname): #undef after including <unistd.h> and
 	before including winsock headers, as per
 	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs/23076>
